--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "chartjs": "^0.3.24",
+    "electron-squirrel-startup": "^1.0.0",
+    "js-circle-progress": "^1.0.0-beta.0",
+    "moment": "^2.30.1",
+    "progressbar.js": "^1.1.1"
   }
 }
