--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
   "license": "MIT",
   "dependencies": {
     "chartjs": "^0.3.24",
+    "electron-preferences": "^2.8.2",
     "electron-squirrel-startup": "^1.0.0",
     "js-circle-progress": "^1.0.0-beta.0",
+    "micromodal": "^0.4.10",
     "moment": "^2.30.1",
-    "progressbar.js": "^1.1.1"
+    "progressbar.js": "^1.1.1",
+    "sweetalert2": "^11.10.7"
   }
 }
