--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "move-minder",
   "productName": "Move Minder!",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Boost Your Productivity with your own time rules!",
   "main": "src/index.js",
   "scripts": {
@@ -30,6 +30,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "auto-launch": "^5.0.6",
     "chartjs": "^0.3.24",
     "electron-is-dev": "^3.0.1",
     "electron-preferences": "^2.8.2",
